src/test/resources/amyc/parser/failing/WrongQName1.amy
object Foo.bar
end Foo.bar
